<resources>
    <string name="app_name">Assignment-1</string>

    <!-- for receiver and sender screen    -->
    <string name="review_heading">Review Information</string>
    <string name="receiver_heading">Receiver Details</string>
    <string name="sender_heading">Sender Details</string>
    <string name="sender_email">Email</string>
    <string name="sender_name">Name</string>
    <string name="sender_contact">Contact Information</string>
    <string name="sender_country">Country</string>
    <string name="sender_address">Address</string>
    <string name="sender_button">Next</string>

    <!-- For table screen    -->
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="contact_info">Contact Info</string>
    
</resources>